2006-03-21  Sebastien Pouliot  <sebastien@ximian.com>

	* gdipFunctions.cs: Import XFree (from libX11) so we can free the 
	memory we allocate.
	* Graphics.cs: Free the memory we get from XGetVisualInfo.

2006-03-20  Sebastien Pouliot  <sebastien@ximian.com>

	* Brush.cs: Allow Dispose to free the unmanaged memory for the brush
	in every case. This has been known (in the past) to cause crashes
	in Cairo. If still true then we need to find out why!

2006-03-09  Peter Dennis Bartok  <pbartok@novell.com>

	* gdipFunctions.cs: Removed XCloseDisplay call from Gdi+ shutdown,
	  it was causing crashes in the finalizers (bug #77464)

2006-03-06  Jonathan Gilbert  <logic@deltaq.org>

	* gdipFunctions.cs: Rewrote the StreamSeekImpl function to invalidate
	  the start_buf cached bytes whenever Seek() is actually called. If
	  Seek is not called (an invalid 'whence' value), then the buffer is
	  not invalidated. This fixes a bug with TIFF loading.

2006-03-02  Peter Dennis Bartok  <pbartok@novell.com>

	* Image.cs (ISerializable.GetObjectData): Save the image in it's
	  original format. (Fixes #77673)

2006-02-28  Jonathan Chambers  <jonathan.chambers@ansys.com>,
            Peter Dennis Bartok  <pbartok@novell.com>

	* Font.cs:
	  - ToLogFont: Reworked to allow running under MS runtime and to 
	    support it being called with both boxed structs and formatted 
	    classes  (MS runtime PtrToStructure cannot marshal boxed value
	    types, but Marshal.AsAny can)
	  - Switched all usage of LOGFONTA to more generic CharSet-driven 
	    LOGFONT structure
	  - FromLogFont: Switched to use charset-agnostic GdipCreateFontFromLogfont
	* gdipStructs.cs: Dropped LOGFONTA and LOGFONTW and switched to
	  CharSet-driven LOGFONT structure (needed because of ToLogFont fix)
	* gdipFunctions.cs: Switched GdipGetLogFont, GdipCreateFontFromLogfont and
	  CreateFontIndirect to use LOGFONT structure, set to be CharSet=Auto
	  (needed because of ToLogFont fix)
