@@ -6,11 +6,7 @@
 //   Ravindra (rkumar@novell.com)
 //
 // (C) Ximian, Inc.  http://www.ximian.com
-// (C) Novell, Inc.  Http://www.novell.com
-//
-
-//
-// Copyright (C) 2004 Novell, Inc (http://www.novell.com)
+// Copyright (C) 2004,2006 Novell, Inc (http://www.novell.com)
 //
 // Permission is hereby granted, free of charge, to any person obtaining
 // a copy of this software and associated documentation files (the
@@ -31,11 +27,6 @@
 // OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
 // WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 //
-
-using System;
-using System.Drawing;
-using System.Drawing.Drawing2D;
-using System.Collections;
 
 namespace System.Drawing
 {
@@ -74,23 +65,6 @@ namespace System.Drawing
 
 		}
 #endif
-		
-                internal Brush CreateBrush (IntPtr brush, System.Drawing.BrushType type)
-                {
-                        switch (type) {
-                        case BrushType.BrushTypeSolidColor:
-                                return new SolidBrush (brush);
-
-                        case BrushType.BrushTypeHatchFill:
-                                return new HatchBrush (brush);
-
-                        case BrushType.BrushTypeTextureFill:
-                                return new TextureBrush (brush);
-
-                        default:
-                                throw new NotImplementedException ();
-                        }
-                }
 
 		public void Dispose ()
 		{
@@ -114,4 +88,3 @@ namespace System.Drawing
 		}
 	}
 }
-
